--- a/veritas-chat/src/app/globals.css
+++ b/veritas-chat/src/app/globals.css
@@ -8,6 +8,10 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: #11295e;
+  --color-primary-light: #11295ec6;
+  --color-border: #66a5cf;
+  --color-placeholder: #94a3b8;
 }
 
 body {
