--- a/veritas-chat/src/app/globals.css
+++ b/veritas-chat/src/app/globals.css
@@ -12,10 +12,32 @@
   --color-primary-light: #11295ec6;
   --color-border: #66a5cf;
   --color-placeholder: #94a3b8;
+  --color-chat-bg: #007bff29;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: "Nunito", sans-serif;
+}
+
+*::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: var(--color-background);
+}
+
+*::-webkit-scrollbar-track {
+  background: #8e9cb037;
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #8e9cb0b5;
+  border-radius: 0.5rem;
+  transition: all 0.3s ease-in-out;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #8e9cb0;
 }
